done with header section after solving issues

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </nav>
         <!-- navbar ends here -->
         <!-- hero section starts here -->
-        <section class="w-10/12 mx-auto">
+        <section class="w-10/12 mx-auto pb-4">
             <!-- for image -->
             <div class="w-[260px] md:w-[424px] lg:w-[570px] mx-auto mb-6 pb-6">
                 <img src="assets/banner.png" alt="" class="w-full">
