done about us section

--- a/index.html
+++ b/index.html
@@ -101,8 +101,53 @@
         </section>
         <!-- hero section ends here -->
     </header>
-    <main class="md:container">
-
+    <main class="md:container  bg-stone-200">
+        <!-- about us starts -->
+        <div class="w-10/12 mx-auto grid grid-cols-1  lg:grid-cols-2 gap-4 py-32 relative">
+            <!-- arrow  -->
+            <div class="absolute border-dashed border-2 border-stone-300 w-28 py-3 hidden lg:block top-16 -left-5 ">
+                <img src="assets/Vector.png" alt="">
+            </div>
+            <!-- text section  -->
+            <div class="space-y-6 ">
+                <div class="space-y-5">
+                    <div class="flex gap-3 justify-center lg:justify-start">
+                        <a class="btn bg-[#FFFFFF] rounded-3xl font-extrabold text-base"><i class="fa-solid fa-arrow-right rounded-full bg-black text-white w-5 h-5 flex justify-center items-center"></i>About Us</a>
+                    </div>
+                    <h1 class="text-center lg:text-start text-2xl md:text-4xl lg:text-[40px] font-extrabold text-black leading-relaxed">We design thoughtful, <br> liveable spaces</h1>
+                    <p class="text-[#494949] text-sm md:text-base">The barn house captivates with its blend of rustic charm and 
+                        modern sophistication, featuring weathered wood, sleek metal accents. </p>
+                </div>
+                <!-- for cards -->
+                <div class="grid-cols-1 md:grid-cols-2 lg:grid-cols-1">
+                    <!-- card commercial -->
+                    <div class="flex items-center gap-3 bg-white rounded-xl p-4  mb-4">
+                        <div>
+                            <img src="assets/commercial.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="text-black text-base font-extrabold md:text-lg lg:text-xl">Commercial</h2>
+                            <p class="text-[#737373] text-base font-medium ">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                    </div>
+                    <!-- card residential -->
+                    <div class="flex items-center gap-3 bg-white rounded-xl p-4  mb-4">
+                        <div>
+                            <img src="assets/residential.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="text-black text-base font-extrabold md:text-lg lg:text-xl">Residential</h2>
+                            <p class="text-[#737373] text-base font-medium ">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- image section -->
+            <div class="h-full flex items-center">
+                <img src="assets/Rectangle.png" alt="" class="h-full">
+            </div>
+        </div>
+        <!-- about us starts -->
     </main>
     <footer>
 
