done about us section after fixing bugs

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </section>
         <!-- hero section ends here -->
     </header>
-    <main class="md:container  bg-stone-200">
+    <main class="md:container  bg-stone-200 w-10/12 mx-auto">
         <!-- about us starts -->
         <div class="w-10/12 mx-auto grid grid-cols-1  lg:grid-cols-2 gap-4 py-32 relative">
             <!-- arrow  -->
