done about us section after fixing bugs

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         modern sophistication, featuring weathered wood, sleek metal accents. </p>
                 </div>
                 <!-- for cards -->
-                <div class="grid-cols-1 md:grid-cols-2 lg:grid-cols-1">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1">
                     <!-- card commercial -->
                     <div class="flex items-center gap-3 bg-white rounded-xl p-4  mb-4">
                         <div>
