done with counter part

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/6ac8fc23da.js" crossorigin="anonymous"></script>
 </head>
-<body class="manrope  bg-white">
+<body class="manrope ">
     <header class="bg-gradient-to-b from-[#f8f8f8] to-[#f2f2f2] md:container md:mx-auto px-10">
         <!-- navbar starts here -->
         <nav class="mx-auto">
@@ -101,9 +101,9 @@
         </section>
         <!-- hero section ends here -->
     </header>
-    <main class="md:container  bg-stone-200 w-10/12 mx-auto">
+    <main class="md:container  bg-stone-200 w-10/12 mx-auto pb-5">
         <!-- about us starts -->
-        <div class="w-10/12 mx-auto grid grid-cols-1  lg:grid-cols-2 gap-4 py-32 relative">
+        <div class="w-10/12 mx-auto grid grid-cols-1  lg:grid-cols-2 gap-6 py-32 relative">
             <!-- arrow  -->
             <div class="absolute border-dashed border-2 border-stone-300 w-28 py-3 hidden lg:block top-16 -left-5 ">
                 <img src="assets/Vector.png" alt="">
@@ -147,7 +147,47 @@
                 <img src="assets/Rectangle.png" alt="" class="h-full">
             </div>
         </div>
-        <!-- about us starts -->
+        <!-- about us ends -->
+        <!-- counter part starts -->
+        <div class="w-10/12 mx-auto bg-white  grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 justify-center items-center py-6 mb-5">
+            <div class="flex flex-col gap-2 justify-center items-center text-center">
+                <div class="text-xl">
+                    <i class="fa-solid fa-message"></i>
+                </div>
+                <div>
+                    <h1 class="font-extrabold text-4xl text-black">235+</h1>
+                    <p class="font-medium text-[#737373] text-base">Happy Client Review</p>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2 justify-center items-center text-center">
+                <div class="text-xl">
+                    <i class="fa-solid fa-house"></i>
+                </div>
+                <div>
+                    <h1 class="font-extrabold text-4xl text-black">50+</h1>
+                    <p class="font-medium text-[#737373] text-base">Work Departments</p>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2 justify-center items-center text-center">
+                <div class="text-xl">
+                    <i class="fa-solid fa-people-group"></i>
+                </div>
+                <div>
+                    <h1 class="font-extrabold text-4xl text-black">30k+</h1>
+                    <p class="font-medium text-[#737373] text-base">Our Happy Client</p>
+                </div>
+            </div>
+            <div class="flex flex-col gap-2 justify-center items-center text-center">
+                <div class="text-xl">
+                    <i class="fa-solid fa-people-arrows"></i>
+                </div>
+                <div>
+                    <h1 class="font-extrabold text-4xl text-black">307+</h1>
+                    <p class="font-medium text-[#737373] text-base">Staff Members</p>
+                </div>
+            </div>
+        </div>
+        <!-- counter part ends -->
     </main>
     <footer>
 
