--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
         <!-- about us ends -->
         <!-- counter part starts -->
-        <div class="w-10/12 mx-auto bg-white  grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 justify-center items-center py-6 mb-5">
+        <div class="w-10/12 mx-auto bg-white  grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 justify-center items-center py-6 mb-5 rounded-3xl">
             <div class="flex flex-col gap-2 justify-center items-center text-center">
                 <div class="text-xl">
                     <i class="fa-solid fa-message"></i>
