solved bug of header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="https://kit.fontawesome.com/6ac8fc23da.js" crossorigin="anonymous"></script>
 </head>
 <body class="manrope ">
-    <header class="bg-gradient-to-b from-[#f8f8f8] to-[#f2f2f2] md:container md:mx-auto px-10">
+    <header class="w-10/12 mx-auto bg-gradient-to-b from-[#f8f8f8] to-[#f2f2f2] md:container  px-10">
         <!-- navbar starts here -->
         <nav class="mx-auto">
             <div class="navbar justify-between">
