solved navbar issue

--- a/index.html
+++ b/index.html
@@ -41,8 +41,27 @@
         <nav class="mx-auto">
             <div class="navbar justify-between">
                 <div class="">
-                  <div class="dropdown">
-                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                  <div class="flex justify-center items-center rounded-full bg-green-primary text-black w-8 h-8"><i class="fa-solid fa-arrow-right text-xl -rotate-45"></i> </div> 
+                  <a class="btn btn-ghost text-black font-extrabold text-xl">Rinterio</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1">
+                    <li class="text-black font-semibold"><a>Home</a></li>
+                    <li class="text-[#737373]"><a>Services</a></li>
+                    <li class="text-[#737373]"><a>Portfolio</a></li>
+                    <li class="text-[#737373]"class="text-[#737373]"><a>Blogs</a></li>
+                    <li class="text-[#737373]"><a>Contact us</a></li>
+                  </ul>
+                </div>
+                <div class="hidden md:block">
+                    <div class="rounded-xl border-collapse space-x-4">
+                        <i class="fa-solid fa-magnifying-glass rounded-full bg-white text-center w-8 h-8 p-1 text-[#737373]"></i>
+                        <i class="fa-solid fa-cart-shopping rounded-full bg-white text-center w-8 h-8 pt-1  fill-none text-[#737373]"></i>
+                      <a class="btn bg-green-primary text-black font-bold rounded-3xl">Book Consult <i class="fa-solid fa-arrow-right  -rotate-45 rounded-full bg-black text-white w-5 h-5 flex justify-center items-center"></i> </a>
+                    </div> 
+                </div>
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost md:hidden">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         class="h-5 w-5"
@@ -66,23 +85,6 @@
                       <li><a>Contact us</a></li>
                     </ul>
                   </div>
-                  <div class="flex justify-center items-center rounded-full bg-green-primary text-black w-8 h-8"><i class="fa-solid fa-arrow-right text-xl -rotate-45"></i> </div> 
-                  <a class="btn btn-ghost text-black font-extrabold text-xl">Rinterio</a>
-                </div>
-                <div class="navbar-center hidden lg:flex">
-                  <ul class="menu menu-horizontal px-1">
-                    <li class="text-black font-semibold"><a>Home</a></li>
-                    <li class="text-[#737373]"><a>Services</a></li>
-                    <li class="text-[#737373]"><a>Portfolio</a></li>
-                    <li class="text-[#737373]"class="text-[#737373]"><a>Blogs</a></li>
-                    <li class="text-[#737373]"><a>Contact us</a></li>
-                  </ul>
-                </div>
-                <div class="rounded-xl border-collapse space-x-4">
-                    <div class="rounded-full bg-white text-center w-8 h-8 p-1"><i class="fa-solid fa-magnifying-glass text-[#737373]"></i></div>
-                    <div class="rounded-full bg-white text-center w-8 h-8 pt-1"><i class="fa-solid fa-cart-shopping  fill-none text-[#737373]"></i></div>
-                  <a class="btn bg-green-primary text-black font-bold rounded-3xl">Book Consult <i class="fa-solid fa-arrow-right  -rotate-45 rounded-full bg-black text-white w-5 h-5 flex justify-center items-center"></i> </a>
-                </div> 
               </div>
         </nav>
         <!-- navbar ends here -->
@@ -188,6 +190,14 @@
             </div>
         </div>
         <!-- counter part ends -->
+        <!-- our work process starts -->
+        <div class="w-10/12 mx-auto flex flex-col gap-5">
+            <!-- text section -->
+            <div>
+                <a class="btn bg-green-primary text-black font-bold text-xl rounded-3xl">View Details <i class="fa-solid fa-arrow-right  -rotate-45 rounded-full bg-[#ABEF5F] text-black w-5 h-5 flex justify-center items-center"></i> </a>
+            </div>
+        </div>
+        <!-- our work process ends -->
     </main>
     <footer>
 
