done with our works process

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <script src="https://kit.fontawesome.com/6ac8fc23da.js" crossorigin="anonymous"></script>
 </head>
 <body class="manrope ">
-    <header class="w-10/12 mx-auto bg-gradient-to-b from-[#f8f8f8] to-[#f2f2f2] ">
+    <header class="w-10/12 mx-auto bg-gradient-to-b from-[#f8f8f8] to-[#f2f2f2] md:container">
         <!-- navbar starts here -->
         <nav class="mx-auto md:px-10">
-            <div class="navbar justify-between relative">
+            <div class="navbar justify-between">
                 <div class="">
                   <div class="flex justify-center items-center rounded-full bg-green-primary text-black w-8 h-8"><i class="fa-solid fa-arrow-right text-xl -rotate-45"></i> </div> 
                   <a class="btn btn-ghost text-black font-extrabold text-xl">Rinterio</a>
@@ -60,7 +60,7 @@
                       <a class="btn bg-green-primary text-black font-bold rounded-3xl">Book Consult <i class="fa-solid fa-arrow-right  -rotate-45 rounded-full bg-black text-white w-5 h-5 flex justify-center items-center"></i> </a>
                     </div> 
                 </div>
-                <div class="dropdown absolute left-[24em]">
+                <div class="dropdown">
                     <div tabindex="0" role="button" class="btn btn-ghost md:hidden">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -103,7 +103,7 @@
         </section>
         <!-- hero section ends here -->
     </header>
-    <main class="md:container  bg-stone-200 w-10/12 mx-auto pb-5">
+    <main class="md:container bg-stone-200 w-10/12 mx-auto pb-5">
         <!-- about us starts -->
         <div class="w-10/12 mx-auto grid grid-cols-1  lg:grid-cols-2 gap-6 py-32 relative">
             <!-- arrow  -->
