done with our latest portfolio

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li class="text-[#737373]"><a>Contact us</a></li>
                   </ul>
                 </div>
-                <div class="hidden md:block">
+                <div class="hidden md:inline">
                     <div class="rounded-xl border-collapse space-x-4">
                         <i class="fa-solid fa-magnifying-glass rounded-full bg-white text-center w-8 h-8 p-1 text-[#737373]"></i>
                         <i class="fa-solid fa-cart-shopping rounded-full bg-white text-center w-8 h-8 pt-1  fill-none text-[#737373]"></i>
@@ -103,7 +103,7 @@
         </section>
         <!-- hero section ends here -->
     </header>
-    <main class="md:container bg-stone-200 w-10/12 mx-auto pb-5">
+    <main class="md:container bg-stone-200 w-10/12 mx-auto ">
         <!-- about us starts -->
         <div class="w-10/12 mx-auto grid grid-cols-1  lg:grid-cols-2 gap-6 py-32 relative">
             <!-- arrow  -->
@@ -151,7 +151,7 @@
         </div>
         <!-- about us ends -->
         <!-- counter part starts -->
-        <div class="w-10/12 mx-auto bg-white  grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 justify-center items-center py-6 mb-10 rounded-3xl">
+        <div class="w-10/12 mx-auto bg-white  grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 justify-center items-center p-6 mb-10 rounded-3xl">
             <div class="flex flex-col gap-2 justify-center items-center text-center">
                 <div class="text-xl">
                     <i class="fa-solid fa-message"></i>
@@ -191,7 +191,7 @@
         </div>
         <!-- counter part ends -->
         <!-- our work process starts -->
-        <div class="w-10/12 mx-auto flex flex-col gap-5 py-5">
+        <div class=" w-10/12 mx-auto flex flex-col gap-5 py-5">
             <!-- text section -->
             <div class="text-center space-y-6">
                 <a class="btn bg-white text-black font-bold text-xl rounded-3xl"> <i class="fa-solid fa-arrow-right   rounded-full bg-transparent text-black w-5 h-5 flex justify-center items-center"></i> How we works</a>
@@ -227,6 +227,72 @@
             </div>
         </div>
         <!-- our work process ends -->
+        <!-- out latest Portfolio starts  -->
+        <div class=" bg-white mb-10">
+            <div class="w-10/12 mx-auto px-0 my-10 lg:my-16">
+                <!-- text section  -->
+                <div class="text-center space-y-6 py-10 mb-10">
+                    <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"> <i class="fa-solid fa-arrow-right   rounded-full bg-transparent text-[#494949] w-5 h-5 flex justify-center items-center"></i> Explore our Latest works</a>
+                    <h1 class="text-black font-extrabold text-2xl md:text-3xl lg:text-4xl">Our Latest Portfolio</h1>
+                    <p class="font-medium text-[#737373] text-base">The barn house captivates with its blend of rustic charm and modern sophistication, <br>featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <!-- card section  -->
+                <div class="p-2 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
+                    <!-- 1st card in lg -->
+                    <div class="border-2 rounded-xl md:col-span-2 lg:col-span-3 p-2 lg:order-1 flex flex-col gap-5 md:flex-row justify-between lg:items-center">
+                        <div class="md:w-5/6 xl:w-1/3 lg:border-2 lg:border-dashed lg:border-stone-400">
+                            <img src="assets/img1.png" alt="" class=" rounded-xl w-full">
+                        </div>
+                        <div class="flex flex-col justify-between gap-4 text-start">
+                            <h2 class="font-extrabold text-xl lg:text-2xl text-[#494949]">Commercial</h2>
+                            <p class="font-medium text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern.</p>
+                            <div>
+                                <button class="font-extrabold text-lg md:text-xl lg:text-2xl text-black px-2 py-1 rounded-full bg-transparent">View Details <i class="fa-solid fa-arrow-right bg-green-primary -rotate-45 rounded-full  text-black w-5 h-5 text-center text-sm"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 2nd card in lg -->
+                    <div class="border-2 rounded-xl lg:order-2">
+                        <div class="w-5/6 mx-auto my-4 lg:border-2 lg:border-dashed lg:border-stone-400">
+                            <img src="assets/img2.png" alt="" class="w-full rounded">
+                        </div>
+                    </div>
+                    <!-- 6th card in lg(hidden) -->
+                    <div class="border-2 rounded-xl md:flex lg:hidden p-2">
+                        <div class="w-5/6 mx-auto my-4">
+                            <img src="assets/img5.png" alt="" class="w-full rounded">
+                        </div>
+                    </div>
+                    <!-- 4th card in lg  -->
+                    <div class="border-2 rounded-xl md:col-span-2 lg:col-span-2 p-2 lg:order-4 flex flex-col gap-5 md:flex-row justify-between lg:items-center">
+                        <div class="md:w-1/2 xl:w-2/3 lg:border-2 lg:border-dashed lg:border-stone-400">
+                            <img src="assets/img4.png" alt="" class=" rounded-xl w-full">
+                        </div>
+                        <div class="flex flex-col justify-between gap-4 text-start">
+                            <h2 class="font-extrabold text-xl lg:text-2xl text-[#494949]">Commercial</h2>
+                            <p class="font-medium text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern.</p>
+                            <div>
+                                <button class="font-extrabold text-lg md:text-xl lg:text-2xl text-black px-2 py-1 rounded-full bg-transparent">View Details <i class="fa-solid fa-arrow-right bg-green-primary -rotate-45 rounded-full  text-black w-5 h-5 text-center text-sm"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 3rd card in lg -->
+                    <div class="border-2 rounded-xl lg:order-3">
+                        <div class="w-5/6 mx-auto my-4 lg:border-2 lg:border-dashed lg:border-stone-400">
+                            <img src="assets/img3.png" alt="" class="w-full rounded">
+                        </div>
+                    </div>
+                    <!-- 5th card in lg -->
+                    <div class="border-2 rounded-xl lg:order-5">
+                        <div class="w-5/6 mx-auto my-4 lg:border-2 lg:border-dashed lg:border-stone-400">
+                            <img src="assets/img5.png" alt="" class="w-full rounded">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- out latest Portfolio ends  -->
     </main>
     <footer>
 
