--- a/index.html
+++ b/index.html
@@ -293,6 +293,96 @@
             </div>
         </div>
         <!-- out latest Portfolio ends  -->
+        <!-- read our article and news starts  -->
+        <div class="w-10/12 mx-auto flex flex-col gap-5 py-5">
+            <!-- text section  -->
+            <div class="text-center space-y-6 py-10 mb-10">
+                <a class="btn bg-[#ABEF5F33] text-black font-bold text-xl rounded-3xl"> <i class="fa-solid fa-arrow-right   rounded-full bg-transparent text-[#494949] w-5 h-5 flex justify-center items-center"></i>Rinterio News</a>
+                <h1 class="text-black font-extrabold text-2xl md:text-3xl lg:text-4xl">Read Our Articles and News</h1>
+                <p class="font-medium text-[#737373] text-base">The barn house captivates with its blend of rustic charm and modern sophistication, <br>featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <!-- card section  -->
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 lg:gap-16 xl:gap-20">
+                <!-- 1st card  -->
+                <div class="flex flex-col md:flex-row lg:flex-col gap-2 border-2 bg-white rounded-lg">
+                        <div class="w-5/6 mx-auto my-4 lg:border-2 lg:border-dashed lg:border-stone-400">
+                            <img src="assets/article1.png" alt="" class="w-full rounded">
+                        </div>
+                        <div class="xl:w-5/6 flex flex-col gap-6 p-2">
+                            <div class="flex lg:items-center gap-5 p-2">
+                                <div class="flex items-center text-center">
+                                    <i class="fa-solid fa-calendar-days w-5 h-5"></i>
+                                    <h5 class="text-center font-medium text-base text-[#737373]">July14, 2024</h5>
+                                </div>
+                                <div class="flex items-center text-center">
+                                    <i class="fa-solid fa-user-tie w-5 h-5"></i>
+                                    <h5 class="text-center font-medium text-base text-[#737373]">By Admin</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <h2 class="font-extrabold text-xl text-[#494949]">How to choose the furniture right  of your home.</h2>
+                            <p class="font-medium text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern. </p>
+                            <div>
+                                <button class="font-bold text-lg md:text-xl lg:text-2xl text-black px-2 py-1 rounded-full bg-transparent">Read More <i class="fa-solid fa-arrow-right bg-green-primary -rotate-45 rounded-full items-center p-1  text-black w-8 h-8 text-center text-lg"></i></button>
+                            </div>
+                        </div>
+                </div>
+
+                <!-- 2nd card  -->
+                <div class="flex flex-col md:flex-row lg:flex-col gap-2 border-2 bg-white rounded-lg">
+                    <div class="w-5/6 mx-auto my-4 lg:border-2 lg:border-dashed lg:border-stone-400">
+                        <img src="assets/article2.png" alt="" class="w-full rounded">
+                    </div>
+                    <div class="xl:w-5/6 flex flex-col gap-6 p-2">
+                        <div class="flex lg:items-center gap-5 p-2">
+                            <div class="flex items-center text-center">
+                                <i class="fa-solid fa-calendar-days w-5 h-5"></i>
+                                <h5 class="text-center font-medium text-base text-[#737373]">July14, 2024</h5>
+                            </div>
+                            <div class="flex items-center text-center">
+                                <i class="fa-solid fa-user-tie w-5 h-5"></i>
+                                <h5 class="text-center font-medium text-base text-[#737373]">By Admin</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h2 class="font-extrabold text-xl text-[#494949]">How to choose the furniture right  of your home.</h2>
+                        <p class="font-medium text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern. </p>
+                        <div>
+                            <button class="font-bold text-lg md:text-xl lg:text-2xl text-black px-2 py-1 rounded-full bg-transparent">Read More <i class="fa-solid fa-arrow-right bg-green-primary -rotate-45 rounded-full items-center p-1  text-black w-8 h-8 text-center text-lg"></i></button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 3rd card  -->
+                <div class="flex flex-col md:flex-row lg:flex-col gap-2 border-2 bg-white rounded-lg">
+                    <div class="w-5/6 mx-auto my-4 lg:border-2 lg:border-dashed lg:border-stone-400">
+                        <img src="assets/article3.png" alt="" class="w-full rounded">
+                    </div>
+                    <div class="xl:w-5/6 flex flex-col gap-6 p-2">
+                        <div class="flex lg:items-center gap-5 p-2">
+                            <div class="flex items-center text-center">
+                                <i class="fa-solid fa-calendar-days w-5 h-5"></i>
+                                <h5 class="text-center font-medium text-base text-[#737373]">July14, 2024</h5>
+                            </div>
+                            <div class="flex items-center text-center">
+                                <i class="fa-solid fa-user-tie w-5 h-5"></i>
+                                <h5 class="text-center font-medium text-base text-[#737373]">By Admin</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-4">
+                        <h2 class="font-extrabold text-xl text-[#494949]">How to choose the furniture right  of your home.</h2>
+                        <p class="font-medium text-base text-[#737373]">The barn house captivates with its blend of rustic charm and modern. </p>
+                        <div>
+                            <button class="font-bold text-lg md:text-xl lg:text-2xl text-black px-2 py-1 rounded-full bg-transparent">Read More <i class="fa-solid fa-arrow-right bg-green-primary -rotate-45 rounded-full items-center p-1  text-black w-8 h-8 text-center text-lg"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- read our article and news ends  -->
     </main>
     <footer>
 
